--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.openengsb.domain</groupId>
     <artifactId>openengsb-domain-parent</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0.M5</version>
   </parent>
 
   <properties>
@@ -88,4 +88,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
+
