--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:git://github.com/openengsb/openengsb.git</connection>
-    <developerConnection>scm:git:git@github.com:openengsb/openengsb.git</developerConnection>
-    <url>http://github.com/openengsb/openengsb</url>
+    <connection>scm:git:git://github.com/openengsb/openengsb-domain-report.git</connection>
+    <developerConnection>scm:git:git@github.com:openengsb/openengsb-domain-report.git</developerConnection>
+    <url>http://github.com/openengsb/openengsb-domain-report</url>
   </scm>
 
   <build>
