--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,18 @@
   <parent>
     <groupId>org.openengsb.domain</groupId>
     <artifactId>openengsb-domain-parent</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>2.0.3</version>
   </parent>
 
   <properties>
     <bundle.symbolicName>org.openengsb.domain.report</bundle.symbolicName>
     <bundle.namespace>org.openengsb.domain.report</bundle.namespace>
+    <openengsb.compile.version>2.0.3</openengsb.compile.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openengsb.domain</groupId>
-  <artifactId>openengsb-domain-report</artifactId>
+  <artifactId>org.openengsb.domain.report</artifactId>
   <version>2.0.0-SNAPSHOT</version>
 
   <name>OpenEngSB :: Domain :: Report</name>
@@ -73,19 +74,22 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.openengsb.core</groupId>
-      <artifactId>openengsb-core-api</artifactId>
+      <groupId>org.openengsb.framework</groupId>
+      <artifactId>org.openengsb.framework.api</artifactId>
       <scope>provided</scope>
+      <version>${openengsb.compile.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.openengsb.core</groupId>
-      <artifactId>openengsb-core-common</artifactId>
+      <groupId>org.openengsb.framework</groupId>
+      <artifactId>org.openengsb.framework.common</artifactId>
       <scope>provided</scope>
+      <version>${openengsb.compile.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.openengsb.core</groupId>
-      <artifactId>openengsb-core-test</artifactId>
+      <groupId>org.openengsb.framework</groupId>
+      <artifactId>org.openengsb.framework.test</artifactId>
       <scope>test</scope>
+      <version>${openengsb.compile.version}</version>
     </dependency>
   </dependencies>
 
