--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
   <parent>
     <groupId>org.openengsb.domain</groupId>
     <artifactId>openengsb-domain-parent</artifactId>
-    <version>2.0.3</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <properties>
     <bundle.symbolicName>org.openengsb.domain.report</bundle.symbolicName>
     <bundle.namespace>org.openengsb.domain.report</bundle.namespace>
-    <openengsb.compile.version>2.0.3</openengsb.compile.version>
+    <openengsb.compile.version>2.1.2</openengsb.compile.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
