--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.openengsb.domain</groupId>
     <artifactId>openengsb-domain-parent</artifactId>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0</version>
   </parent>
 
   <properties>
@@ -49,7 +49,7 @@
   </description>
 
   <url>http://www.openengsb.org</url>
-  
+
   <inceptionYear>2009</inceptionYear>
 
   <licenses>
@@ -65,7 +65,7 @@
     <developerConnection>scm:git:git@github.com:openengsb/openengsb-domain-report.git</developerConnection>
     <url>http://github.com/openengsb/openengsb-domain-report</url>
   </scm>
-  
+
   <issueManagement>
     <system>JIRA</system>
     <url>http://issues.openengsb.org/jira/browse/OPENENGSB</url>
