--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openengsb.domain</groupId>
   <artifactId>org.openengsb.domain.report</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 
   <name>OpenEngSB :: Domain :: Report</name>
 
