[OPENENGSB-3088] updated domain to the new model handling

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <bundle.namespace>org.openengsb.domain.report</bundle.namespace>
     <domain.name>ReportDomain</domain.name>
     <openengsb.compile.version>3.0.0-SNAPSHOT</openengsb.compile.version>
+    <labs.delegation.version>0.1.0</labs.delegation.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
@@ -127,6 +128,11 @@
       <artifactId>org.openengsb.framework.test</artifactId>
       <scope>test</scope>
       <version>${openengsb.compile.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openengsb.labs.delegation</groupId>
+      <artifactId>org.openengsb.labs.delegation.service</artifactId>
+      <version>${labs.delegation.version}</version>
     </dependency>
   </dependencies>
 
